src/app/shared/components/header/header.scss
:host {
  display: flex;
  width: 100%;
}

.header-outer {
  display: flex;
  justify-content: flex-start;
  width: 100%;
  min-height: 88px;
  background-color: var(--color-font-bright);
  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
  z-index: 100;
}

.header-logo {
  display: none;
}

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: calc(1440px - 232px);
  padding: 16px 32px 16px 60px;

  a {
    display: none;
  }
}

.help-icon {
  width: 32px;
  height: 32px;
  transition: var(--transition-fast);
  &:hover {
    scale: 1.2;
  }
}

.help-and-profile {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 16px;
}

.profile-wrapper {
  position: relative;
}

.profile {
  width: 56px;
  height: 56px;
  border: solid 3px black;
  border-radius: 50%;
  background-color: white;
  color: var(--color-light-blue);
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  transition: var(--transition-fast);
  &:hover {
    background-color: rgba(209, 209, 209, 0.5);
    cursor: pointer;
  }
}

.dropdown {
  position: absolute;
  top: calc(100% + 21px);
  right: 0;
  min-width: 170px;
  background-color: var(--color-medium-blue);
  border-radius: 16px 0 16px 0;
  overflow: hidden;
  z-index: 100;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 12px 16px;
  gap: 8px;
  &.bounce {
    animation: bounceLeft 0.2s ease-in-out;
  }
  &__link {
    display: block;
    width: 100%;
    padding: 6px 12px;
    color: var(--color-light-grey);
    font-weight: 300;
    text-decoration: none;
    text-align: left;
    cursor: pointer;
    &:hover {
      background-color: var(--color-nav-hover);
    }
    &--help {
      display: none;
    }
  }
}

@media (max-width: 1120px) {
  .header-container {
    padding: 16px 28px;
  }
}

@media (max-width: 1024px) {
  app-contacts-list {
    width: clamp(280px, 30vw, 456px);
  }
  app-contact-details {
    flex: 1;
    min-width: 280px;
  }
}

@media (max-width: 768px) {
  .dropdown {
    right: -5px;
    gap: 8px;
    padding: 16px 20px;
    font-size: 1rem;
    top: auto;
    border-radius: 16px 0 16px 16px;
  }
  .header-container {
    padding: 16px 28px;

    a {
      display: initial;
    }
  }
  .header-logo {
    display: block;
    height: 40px;
    width: auto;
  }

  .project-management-tool {
    display: none;
  }
  .dropdown__link {
    padding: 10px 12px;
  }

  .dropdown__link--help {
    display: block;
  }
}

